--- a/3d/earrings.html
+++ b/3d/earrings.html
@@ -812,36 +812,12 @@
 
 <body>
   <div class="mt2021">
-
-
-
-    <section class="pt-5 pb-4">
-      <div class="container">
-        <div class="row ">
-          <div class="col-xs-24">
-            <h1 class="text-center">Diamond Solitaire Collection</h1>
-            <h3 class="text-center">by michael trio</h3>
-            <div class="studs-nav pt-3">
-
-              <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline active"
-                role="button">Earrings (Studs) </a>
-
-              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline"
-                role="button">Pendants </a>
-
-              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline "
-                role="button">Wedding Bands </a>
-              <!-- <a href="#" class="btn btn-blue-outline" role="button">Bracelets </a> -->
-
-              <!-- <a href="#" class="btn btn-blue-outline" role="button">Rings </a> -->
-
-            </div>
-          </div>
-        </div>
-      </div>
+    <section>
+      <img src="https://www.michaeltrio.com/pub/media/0newpendant/Solitaire-earrings-banner.jpg" alt="" class="w-100">
     </section>
 
-    <section class="earrings-banner py-5">
+
+    <!-- <section class="earrings-banner py-5">
 
       <div class="container ">
 
@@ -859,7 +835,32 @@
       </div>
 
 
+    </section> -->
+
+
+    <section class="py-3 ">
+      <div class="container">
+        <div class="row ">
+          <div class="col-xs-24">
+            <!-- <h1 class="text-center">Diamond Solitaire Collection</h1>
+            <h3 class="text-center">by michael trio</h3> -->
+            <div class="studs-nav ">
+
+              <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline active"
+                role="button">Diamond Studs </a>
+
+              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline"
+                role="button">Diamond Pendants </a>
+
+              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline "
+                role="button">Wedding Bands </a>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
 
     <section class="bg-lightgrey py-5">
 
