--- a/3d/pendant.html
+++ b/3d/pendant.html
@@ -813,30 +813,35 @@
 
 <body>
   <div class="mt2021">
+    <section>
+      <img src="https://www.michaeltrio.com/pub/media/0newpendant/Solitaire-pendant-banner.jpg" alt="" class="w-100">
+    </section>
 
-    <section class="pt-5 pb-4">
+    <section class="py-3">
       <div class="container">
         <div class="row ">
           <div class="col-xs-24">
-            <h1 class="text-center">Diamond Solitaire Collection</h1>
-            <h3 class="text-center">by michael trio</h3>
-            <div class="studs-nav pt-3">
+            <!-- <h1 class="text-center">Diamond Solitaire Collection</h1>
+            <h3 class="text-center">by michael trio</h3> -->
+            <div class="studs-nav ">
 
               <a href="https://www.michaeltrio.com/jewellery/earrings/studs" class="btn btn-blue-outline "
-                role="button">Earrings (Studs) </a>
+                role="button">Diamond Studs </a>
 
               <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline active"
-                role="button">Pendants </a>
-              <!-- <a href="#" class="btn btn-blue-outline" role="button">Bracelets </a> -->
-
-              <!-- <a href="#" class="btn btn-blue-outline" role="button">Rings </a> -->
+                role="button">Diamond Pendants </a>
+              <a href="https://www.michaeltrio.com/jewellery/pendant/studs" class="btn btn-blue-outline "
+                role="button">Wedding Bands </a>
 
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="pandent-banner py-5">
+
+
+
+    <!-- <section class="pandent-banner py-5">
 
       <div class="container ">
 
@@ -853,7 +858,10 @@
       </div>
 
 
-    </section>
+    </section> -->
+
+
+
     <section class=" py-5">
 
       <div class="container">
