--- a/3d/wedding_3d.html
+++ b/3d/wedding_3d.html
@@ -864,7 +864,11 @@
 
     <div class="wedding3D">
 
-      <section class="earrings-banner py-5">
+      <section>
+        <img src="https://www.michaeltrio.com/pub/media/0newpendant/Solitaire-earring-banner.jpg" alt="" class="w-100">
+      </section>
+
+      <!-- <section class="earrings-banner py-5">
 
         <div class="container ">
 
@@ -882,7 +886,10 @@
         </div>
 
 
-      </section>
+      </section> -->
+
+
+
       <section class="py-3">
         <div class="container">
           <div class="row ">
@@ -962,6 +969,9 @@
 
 
       </section>
+
+
+
       <section class="bg-lightgrey py-5">
 
         <div class="container">
